index.html updated

--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<<<<<<< HEAD
-    <title>Ui Exapler</title>
-=======
-    <title>UI-Exemplar</title>
->>>>>>> 4dc55bb849bfc77d3878ba601cafea841433d478
+    <title>Ui Exampler</title>
   </head>
   <body>
     <div id="root"></div>
